--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6764,3 +6764,66 @@ button.close {
     display: none !important;
   }
 }
+.ckl-checklist {
+  box-sizing: border-box;
+  width: 100%;
+  float: left;
+  position: relative;
+  background-color: #f5f5f5;
+  border: 1px solid #e1e1e1;
+  border-radius: 5px;
+  font-family: "OpenSansLight", Arial, sans-serif;
+  height: 35px;
+}
+.ckl-checklist * {
+  box-sizing: border-box;
+}
+.ckl-checklist .ckl-toggle {
+  position: absolute;
+  width: 24px;
+  height: 20px;
+  border-left: 1px solid #666;
+  padding-left: 3px;
+  line-height: 100%;
+  right: 3px;
+  top: 7px;
+  text-align: center;
+  cursor: pointer;
+  background: url(../images/v.png) no-repeat 3px 0px;
+  background-size: contain;
+}
+.ckl-checklist .ckl-label {
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
+  height: 100%;
+  padding-right: 25px;
+  right: 0px;
+  top: 0px;
+  line-height: 35px;
+  overflow: hidden;
+  text-align: left;
+  cursor: pointer;
+}
+.ckl-checklist .ckl-list {
+  display: none;
+  position: absolute;
+  width: 100%;
+  left: 0px;
+  top: 35px;
+  padding: 0px;
+  background: #fff;
+  border: 1px solid #ccc;
+  z-index: 999;
+  overflow: auto;
+  max-height: 100px;
+}
+.ckl-checklist .ckl-list li {
+  list-style: none;
+  padding: 5px;
+  width: 100%;
+  border-bottom: 1px solid #ccc;
+}
+.ckl-checklist .ckl-list li input[type="checkbox"] {
+  margin-right: 5px;
+}
